Servidor Federado Implementando ajustes para agregar nuevos servidores
Se cuentan con tres servidores federados puede ver la configuracion del archivo federated.json
el primero  (fed-1)
{
    "Mode": "federated",
    "Port": 9000,
    "NodeID": "fed-1",
     "FederatedServers": [
    "http://localhost:9000",
    "http://localhost:9001",
    "http://localhost:9002"
  ]
}

el segundo (fed-2)
{
    "Mode": "federated",
    "Port": 9001,
    "NodeID": "fed-2",
     "FederatedServers": [
    "http://localhost:9000",
    "http://localhost:9001",
    "http://localhost:9002"
  ]
}

el tercero(fed-3)
{
    "Mode": "federated",
    "Port": 9002,
    "NodeID": "fed-3",
     "FederatedServers": [
    "http://localhost:9000",
    "http://localhost:9001",
    "http://localhost:9002"
  ]
}

puede observar que todos los servidores estan activos y poseen la misma configuracion en  "FederatedServers": [
    "http://localhost:9000",
    "http://localhost:9001",
    "http://localhost:9002"
  ]
  
 
 Cuando se va a crear un nuevo servidor llamado fed-4 se cuenta con esta informacion
 (fed-4)
 {
    "Mode": "federated",
    "Port": 9004,
    "NodeID": "fed-4",
     "FederatedServers": [
    "http://localhost:9000",
    "http://localhost:9004"
  ]
}

puede observar que el la configuracion  
"FederatedServers": [
    "http://localhost:9000",
    "http://localhost:9004"
    
 Contiene al menos uno de los servidores federados en este caso "http://localhost:9000", que corresponde a fed-1
 y contiene su propio  "http://localhost:9004" pero ningun otro servidor fed-1, fed-2, fed-3 lo contienen ya que es un nuevo servidor.
 La forma de proceder en estos casos con nuevos servidores federados seria la siguiente.
 
1. Se ejecuta el nuevo servidor federado fed-4, este se conecta por almenos uno de los servidores federados a la red. (   "http://localhost:9000")
2. Se identifica cual es el servidor federado lider de la red en este ejemplo es fed-1.
3. El lider obtiene el url del nuevo servidor federad